Fix header width issues
no horizontal scrolling

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -23,7 +23,7 @@ body, html {
  * Styling of the header
  */
 #header {
-      width: 100vw;
+      padding: 0;
       height: 100vh;
       background-image: url(../img/PiaNeu.jpg);
       background-size: cover;
